--- a/imageLinks.html
+++ b/imageLinks.html
@@ -7,20 +7,17 @@
 	<link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div id="wrap">
-	<div id="header-images">
-		<div class="image-1">
-		</div>
-		<div class="image-2">
-		</div>
-		<div class="image-3">
-		</div>
-		<div class="image-4">
-		</div>
-		<div class="image-5">
-		</div>
-	</div>
-</div>
+	<!-- Adds header images animation -->
+	<div id="wrap">
+        <div id="header">
+          <div class="one"></div>
+          <div class="two"></div>
+          <div class="three"></div>
+          <div class="four"></div>
+          <div class="five"></div>
+          <div class="six"></div>
+        </div>
+      </div>
 
 <div class="homepage-title">
 	<p>Welcome to my Photo Blog</p>
