renamed to index

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       </div>
 
 <div class="homepage-title">
-	<p>Welcome to my Photo Blog</p>
+	<p class="header-title">Welcome to my Photo Blog</p>
 </div>
 
 <!-- images of animals -->
@@ -50,5 +50,8 @@
 	</div>
 </div>
 
+<footer>
+	<p class="footer-text">Coded by Zein Kap &copy; 2017</p>
+</footer>
 </body>
 </html>
