adds code for more animation but pop not working

--- a/index.html
+++ b/index.html
@@ -26,27 +26,27 @@
 <!-- images of animals -->
 <div class="row">
 	<div class="col-3">
-		<img src="images/bears_mus.jpg" alt="four member bear family">
-		<img src="images/blue_whale_mus.jpg" alt="blue whale floating above aquarium">
-		<img src="images/lava_cake.jpg" alt="happy parrot">
+		<img src="images/bears_mus-min.jpg" alt="four member bear family">
+		<img src="images/blue_whale_mus-min.jpg" alt="blue whale floating above aquarium">
+		<img src="images/lava_cake-min.jpg" alt="happy parrot">
 	</div>
 </div>
 
 <!-- images of  sculpture park in garden city-->
 <div class="row">
 	<div class="col-3">
-		<img src="images/four_women_in_garden.jpg" alt="sculpture of four women near a tree">
-		<img src="images/statue_draws.jpg" alt="sculpture of a women drawing a painting">
-		<img src="images/reading_sculp.jpg" alt="sculpture of a women reading a book">
+		<img src="images/four_women_in_garden-min.jpg" alt="sculpture of four women near a tree">
+		<img src="images/statue_draws-min.jpg" alt="sculpture of a women drawing a painting">
+		<img src="images/reading_sculp-min.jpg" alt="sculpture of a women reading a book">
 	</div>
 </div>
 
 <!-- outdoor NY -->
 <div class="row">
 	<div class="col-3">
-		<img src="images/dam.jpg" alt="hoover dam">
-		<img src="images/globe.jpg" alt="Flushing Meadows Globe">
-		<img src="images/plant_valley.jpg" alt="plant tunnel">
+		<img src="images/dam-min.jpg" alt="hoover dam">
+		<img src="images/globe-min.jpg" alt="Flushing Meadows Globe">
+		<img src="images/plant_valley-min.jpg" alt="plant tunnel">
 	</div>
 </div>
 
